# near-oracle

./: .gitignore  IMPLEMENTATION.md  README.md  setup-demo.sh  start-all.sh  stop-all.sh
contract/: Cargo.toml
contract/src/: lib.rs
dashboard/: .env.example  README.md
dashboard/app/: layout.tsx  page.tsx
dashboard/app/api/data/: route.ts
dashboard/components/: dashboard-client.tsx  live-indicator.tsx  node-status.tsx  price-table.tsx  system-stats.tsx  theme-toggle.tsx
dashboard/lib/: near.ts
oracle-node/: .env.example  Dockerfile  README.md  jest.config.cjs
oracle-node/src/: config.ts  index.ts  nearIntegration.ts  priceFetcher.test.ts  priceFetcher.ts  priceUtils.ts
scripts/: build-contract.sh  deploy-testnet.sh  setup-demo.sh  verify-installation.sh
