[package]
name = "tee-oracle-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.17.2", features = ["legacy"] }
borsh = { version = "1.5.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
codegen-units = 1
opt-level = "s"
lto = false
debug = false
panic = "abort"
overflow-checks = true

[dev-dependencies]
near-sdk = { version = "5.17.2", features = ["legacy", "unit-testing"] }
